# tinygp

./: .gitignore  README.md  TODO  jav  make_problem.py  plot_chart.py  plot_data_zad1a.py  plot_data_zad2a.py  plot_data_zad3c.py  plot_data_zad6a.py  pyt  tiny_gp.py  tiny_gp_org.java  tinygp_eval.py  troublemaker.py
benchmark/: testowe.txt
benchmark/testowe/: 1.1.F.bench
customlang/: Cargo.toml  abs  factorial  jezyk.txt  jezyk2.txt  solution.txt  tmp
genlang/: Cargo.toml  jezyk.txt  last_population  solution.txt
genlang/population/: 1_1_a  1_1_a.pop  1_1_b  1_1_b.pop  1_1_c  1_1_c.pop  1_1_d.pop  1_1_e.pop  1_1_f.pop  1_2_a.pop  1_2_b.pop  1_2_c.pop  1_2_d.pop  1_2_e.pop  1_3_a.pop  1_3_b.pop  1_4_a.pop  1_4_a_3_nums_-3.pop  final_2.pop  final_2_square.pop  final_2_sum.pop  final_bool_1.pop  final_bool_10.pop  final_bool_2.pop  final_bool_3.pop  final_bool_4.pop  final_bool_5.pop  final_bool_6.pop  final_bool_7.pop  final_bool_8.pop  final_bool_9.pop  out-1_1_a  out-1_1_a.txt  out-1_1_b  out-1_1_b.txt  out-1_1_c  out-1_1_c.txt  out-1_1_d.txt  out-1_1_e.txt  out-1_1_f.txt  (+23 more)
genlang/src/: main.rs  params.rs  tinygp.rs
genlang/src/benchmark/: bench_1_1.rs  bench_1_2.rs  bench_1_3.rs  bench_1_4.rs  bench_final.rs  bench_final_bool.rs  mod.rs  util.rs
genlang/src/tinygp/: common.rs  evolution.rs  evolution_tests.rs  execution.rs  fitness_funcs.rs  growing.rs  interpreter_tests.rs
output/: output.txt
raport/: 1_1_b_part_2  Benchmarki.md  README.md  Raport_draft.md
tiny_gp/: Cargo.toml  solution.txt  zad1a solution.txt
trash/: tiny_gp.java
(+14 files in other folders)
