[package]
name = "tiny_gp_lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_assertions = "1.4.0"
rand = "0.7"
structopt = "0.3"
strum = "0.25"
strum_macros = "0.25.3"
num-traits = "0.2"
num-derive = "0.2"
rand_derive = "0.5.0"
log = "0.4.20"
env_logger = "0.10.1"
serde = "1.0.193"
serde_derive = "1.0.193"
serde-lexpr = "0.1.3"
